--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<script src="js/classie.js"></script>
 			<!--top-nav---->
 			<div class="logo">
-				<a href="index.html"><img src="images/logo.png" alt=""/></a>
+				<!--a href="index.html"><img src="images/logo.png" alt=""/></a-->
 			</div>
 			<div class="top-nav">
 				<div class="nav-icon">
@@ -208,12 +208,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="strip text-center"><img src="images/edu.png" alt=" "/></div>
 		<div class="edu-grids">
 			<div class="col-md-4 edu-grid">
-				<p>2012 - 2013</p><span>Graduated</span>
+				<p>2004 - 2010</p><span>Graduated</span>
 				<img src="images/arrow.png" alt=""/>
 				<div class="edu-border">
 					<div class="edu-grid-master">
-						<h3>MASTER DEGREE OF COMPUTER SCIENCE</h3>
-						<h4>Oxford University</h4>
+						<h3>Guangdong, China</h3>
+						<h4>Shenzhen Binhe Primary School</h4>
 					</div>
 					<div class="edu-grid-info">
 						<h5>This is Photoshop's version Lorem Ipsum.
@@ -222,12 +222,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 			</div>
 			<div class="col-md-4 edu-grid">
-				<p>2012 - 2013</p><span>Graduated</span>
+				<p>2010-2013</p><span>Graduated</span>
 				<img src="images/arrow.png" alt=""/>
 				<div class="edu-border">
 					<div class="edu-grid-master">
-						<h3>MASTER DEGREE OF COMPUTER SCIENCE</h3>
-						<h4>Oxford University</h4>
+						<h3>Guangdong, China</h3>
+						<h4>Shenzhen Senior High School</h4>
 					</div>
 					<div class="edu-grid-info">
 						<h5>This is Photoshop's version Lorem Ipsum.
@@ -236,69 +236,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 			</div>
 			<div class="col-md-4 edu-grid">
-				<p>2012 - 2013</p><span>Graduated</span>
+				<p>2013 - 2016</p><span>Enrolling</span>
 				<img src="images/arrow.png" alt=""/>
 				<div class="edu-border">
 					<div class="edu-grid-master">
-						<h3>MASTER DEGREE OF COMPUTER SCIENCE</h3>
-						<h4>Oxford University</h4>
-					</div>
-					<div class="edu-grid-info">
-						<h5>This is Photoshop's version Lorem Ipsum.
-						Well, the way they make shows is, they make one show.</h5>
-					</div>
-				</div>
-			</div>
-			<div class="clearfix"></div>
-		</div>
-	</div>
-
-</div>
-<!--//education-->
-<div class="strip-border"><p></p></div>
-<!--education-->
-<div class="education text-center">
-	<div class="container">
-		<div class="edu-info">
-			<h3>EDUCATION</h3>
-		</div>
-		<div class="strip text-center"><img src="images/edu.png" alt=" "/></div>
-		<div class="edu-grids">
-			<div class="col-md-4 edu-grid">
-				<p>2012 - 2013</p><span>Graduated</span>
-				<img src="images/arrow.png" alt=""/>
-				<div class="edu-border">
-					<div class="edu-grid-master">
-						<h3>MASTER DEGREE OF COMPUTER SCIENCE</h3>
-						<h4>Oxford University</h4>
-					</div>
-					<div class="edu-grid-info">
-						<h5>This is Photoshop's version Lorem Ipsum.
-						Well, the way they make shows is, they make one show.</h5>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4 edu-grid">
-				<p>2012 - 2013</p><span>Graduated</span>
-				<img src="images/arrow.png" alt=""/>
-				<div class="edu-border">
-					<div class="edu-grid-master">
-						<h3>MASTER DEGREE OF COMPUTER SCIENCE</h3>
-						<h4>Oxford University</h4>
-					</div>
-					<div class="edu-grid-info">
-						<h5>This is Photoshop's version Lorem Ipsum.
-						Well, the way they make shows is, they make one show.</h5>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4 edu-grid">
-				<p>2012 - 2013</p><span>Graduated</span>
-				<img src="images/arrow.png" alt=""/>
-				<div class="edu-border">
-					<div class="edu-grid-master">
-						<h3>MASTER DEGREE OF COMPUTER SCIENCE</h3>
-						<h4>Oxford University</h4>
+						<h3>Guangdong, China</h3>
+						<h4>Shenzhen Senior High School</h4>
 					</div>
 					<div class="edu-grid-info">
 						<h5>This is Photoshop's version Lorem Ipsum.
@@ -341,6 +284,60 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="work-grid-info">
 						<h4>Google</h4>
 						<h5>Visual Designer</h5>
+						<p>Now that there is the Tec-9, a crappy spray gun from South Miami.
+						This gun is advertised as the most popular gun in American crime.
+						Do you believe that shit? It actually says that in the little book
+						that comes with it: the most popular gun in</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4 w-grid">
+				<div class="work-grid">
+					<h3>2013 - Now</h3>
+					<div class="work-grid-info">
+						<h4>Google</h4>
+						<h5>Visual Designer</h5>
+						<p>Now that there is the Tec-9, a crappy spray gun from South Miami.
+						This gun is advertised as the most popular gun in American crime.
+						Do you believe that shit? It actually says that in the little book
+						that comes with it: the most popular gun in</p>
+					</div>
+				</div>
+			</div>
+			<div class="clearfix"></div>
+		</div>
+	</div>
+</div>
+<!--//work-->
+<div class="strip-border"><p></p></div>
+<!--work-->
+<div class="work-experience text-center">
+
+	<div class="container">
+		<div class="work-info">
+			<h3>Volunteer EXPERIENCE</h3>
+		</div>
+		<div class="strip text-center"><img src="images/work.png" alt=" "/></div>
+		<div class="work-grids">
+			<div class="col-md-4 w-grid">
+				<div class="work-grid">
+					<h3>2013 - Now</h3>
+					<div class="work-grid-info">
+						<h4>Shenzhen Museum</h4>
+						<h5>Narrator</h5>
+						<p>Now that there is the Tec-9, a crappy spray gun from South Miami.
+						This gun is advertised as the most popular gun in American crime.
+						Do you believe that shit? It actually says that in the little book
+						that comes with it: the most popular gun in</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4 w-grid">
+				<div class="work-grid">
+					<h3>2015.7</h3>
+					<div class="work-grid-info">
+						<h4>Dunhuang Academy</h4>
+						<h5>Promotion project designer</h5>
 						<p>Now that there is the Tec-9, a crappy spray gun from South Miami.
 						This gun is advertised as the most popular gun in American crime.
 						Do you believe that shit? It actually says that in the little book
