--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 		<div class="banner-info">
 			<div class="banner-left">
-				<img src="images/1.png" alt=""/>
+				<img src="1.pic.jpg" alt=""/>
 			</div>
 			<div class="banner-right">
 				<h1>LUO XIAOLAN</h1>
 				<div class="border"></div>
-				<h2>UX - UI DESIGNER</h2>
+				<h2>Coder,</h2>
 				<a href="http://xiaolanluo.com/attachments/Resume.pdf">DOWNLOAD MY RESUME</a>
 			</div>
 			<div class="clearfix"></div>
@@ -120,16 +120,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="container">
 		<h3>ABOUT ME</h3>
 		<div class="strip text-center"><img src="images/about.png" alt=" "/></div>
-		<p>Dyin' ain't much of a livin', boy. here. put that in your report!" and "i may have found
-		a way out of here. you want a guarantee, buy a toaster. here. put that in your report!" and
-		"i may have found a way out of here. this is the ak-47 assault rifle, the preferred weapon of
-		your enemy; and it makes a distinctive sound when fired at you, so remember it. this is the ak-47
-		assault rifle, the preferred weapon of your enemy; and it makes a distinctive sound when fired at
-		you, so remember it. don't p!ss down my back and tell me it's raining. this is the ak-47 assault
-		rifle, the preferred weapon of your enemy; and it makes a distinctive sound when fired at you,
-		so remember it. don't p!ss down my back and tell me it's raining. this is my gun, clyde! man's
-		gotta know his limitations. ever notice how sometimes you come across somebody you shouldn't have
-		f**ked with? well, i'm that guy.</p>
+		<p>Well</p>
 		<ul>
 			<li><a class="fb" href="#"></a></li>
 			<li><a class="twit" href="#"></a></li>
@@ -150,11 +141,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="skill-grids">
 					<div class="col-md-2 skills-grid text-center">
 						<div class="circle" id="circles-1"></div>
-						<p>Photoshop</p>
+						<p>Photography</p>
 					</div>
 					<div class="col-md-2 skills-grid text-center">
 						<div class="circle" id="circles-2"></div>
-						<p>Illustrator</p>
+						<p>Photoshop</p>
 					</div>
 					<div class="col-md-2 skills-grid text-center">
 						<div class="circle" id="circles-3"></div>
@@ -162,15 +153,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="col-md-2 skills-grid text-center">
 						<div class="circle" id="circles-4"></div>
-						<p>Html 5 / CSS 3</p>
+						<p>Html 5</p>
 					</div>
 					<div class="col-md-2 skills-grid text-center">
 						<div class="circle" id="circles-5"></div>
-						<p>C4D</p>
+						<p>Swift</p>
 					</div>
 					<div class="col-md-2 skills-grid text-center">
 						<div class="circle" id="circles-6"></div>
-						<p>After Effect</p>
+						<p>Java</p>
 					</div>
 					<div class="clearfix"> </div>
 				 <script type="text/javascript" src="js/circles.js"></script>
@@ -267,10 +258,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="work-grids">
 			<div class="col-md-4 w-grid">
 				<div class="work-grid">
-					<h3>2013 - Now</h3>
+					<h3>2014</h3>
 					<div class="work-grid-info">
-						<h4>Google</h4>
-						<h5>Visual Designer</h5>
+						<h4>Saige</h4>
+						<h5>investigator</h5>
 						<p>Now that there is the Tec-9, a crappy spray gun from South Miami.
 						This gun is advertised as the most popular gun in American crime.
 						Do you believe that shit? It actually says that in the little book
@@ -280,10 +271,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="col-md-4 w-grid">
 				<div class="work-grid">
-					<h3>2013 - Now</h3>
+					<h3>2015</h3>
 					<div class="work-grid-info">
-						<h4>Google</h4>
-						<h5>Visual Designer</h5>
+						<h4>InDas Tech</h4>
+						<h5>iOS Developer</h5>
 						<p>Now that there is the Tec-9, a crappy spray gun from South Miami.
 						This gun is advertised as the most popular gun in American crime.
 						Do you believe that shit? It actually says that in the little book
@@ -293,10 +284,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="col-md-4 w-grid">
 				<div class="work-grid">
-					<h3>2013 - Now</h3>
+					<h3>2014 - Now</h3>
 					<div class="work-grid-info">
-						<h4>Google</h4>
-						<h5>Visual Designer</h5>
+						<h4>Student Town</h4>
+						<h5>Homepage designer</h5>
 						<p>Now that there is the Tec-9, a crappy spray gun from South Miami.
 						This gun is advertised as the most popular gun in American crime.
 						Do you believe that shit? It actually says that in the little book
@@ -311,11 +302,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--//work-->
 <div class="strip-border"><p></p></div>
 <!--work-->
-<div class="work-experience text-center">
+<div class="volunteer-experience text-center">
 
 	<div class="container">
 		<div class="work-info">
-			<h3>Volunteer EXPERIENCE</h3>
+			<h3>VOLUNTEER EXPERIENCE</h3>
 		</div>
 		<div class="strip text-center"><img src="images/work.png" alt=" "/></div>
 		<div class="work-grids">
@@ -407,7 +398,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </div>
 <!--//services-->
 <!--portfolio-->
-<div class="gallery-section text-center" id="portfolio">
+<!--<div class="gallery-section text-center" id="portfolio">
 	<div class="container">
 		<h3>PORTFOLIO</h3>
 		<div class="strip text-center"><img src="images/port.png" alt=" "/></div>
@@ -478,7 +469,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</script>
 		</div>
 	</div>
-</div>
+</div>-->
 <!--//portfolio-->
 <!--process-->
 <div class="process text-center">
